fix: 1.增加启动脚本;2.修复mcp
